force-app/main/default/objects/Translations__mdt/fields/ar__c.field-meta.xml
<CustomField>
    <fullName>ar__c</fullName>
    <description>Arabic</description>
    <label>ar</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>