force-app/main/default/objects/Translations__mdt/fields/da__c.field-meta.xml
<CustomField>
    <fullName>da__c</fullName>
    <description>Danish</description>
    <label>da</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>