force-app/main/default/objects/Translations__mdt/fields/de__c.field-meta.xml
<CustomField>
    <fullName>de__c</fullName>
    <description>german</description>
    <label>de</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>