force-app/main/default/objects/Translations__mdt/fields/en_us__c.field-meta.xml
<CustomField>
    <fullName>en_us__c</fullName>
    <label>en_us</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>