force-app/main/default/objects/Translations__mdt/fields/es__c.field-meta.xml
<CustomField>
    <fullName>es__c</fullName>
    <description>spanish</description>
    <label>es</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>