force-app/main/default/objects/Translations__mdt/fields/es_mx__c.field-meta.xml
<CustomField>
    <fullName>es_mx__c</fullName>
    <description>spanish mexico</description>
    <label>es_mx</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>