force-app/main/default/objects/Translations__mdt/fields/fi__c.field-meta.xml
<CustomField>
    <fullName>fi__c</fullName>
    <description>finnish</description>
    <label>fi</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>