force-app/main/default/objects/Translations__mdt/fields/fr__c.field-meta.xml
<CustomField>
    <fullName>fr__c</fullName>
    <description>french</description>
    <label>fr</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>