force-app/main/default/objects/Translations__mdt/fields/hu__c.field-meta.xml
<CustomField>
    <fullName>hu__c</fullName>
    <description>Hungarian</description>
    <label>hu</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>