force-app/main/default/objects/Translations__mdt/fields/ja__c.field-meta.xml
<CustomField>
    <fullName>ja__c</fullName>
    <label>ja</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>