force-app/main/default/objects/Translations__mdt/fields/ko__c.field-meta.xml
<CustomField>
    <fullName>ko__c</fullName>
    <description>Korean</description>
    <label>ko</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>