force-app/main/default/objects/Translations__mdt/fields/pl__c.field-meta.xml
<CustomField>
    <fullName>pl__c</fullName>
    <description>Polish</description>
    <label>pl</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>