force-app/main/default/objects/Translations__mdt/fields/pt_br__c.field-meta.xml
<CustomField>
    <fullName>pt_br__c</fullName>
    <description>Portuguese (Brazil)</description>
    <label>pt_br</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>