force-app/main/default/objects/Translations__mdt/fields/ru__c.field-meta.xml
<CustomField>
    <fullName>ru__c</fullName>
    <description>Russian</description>
    <label>ru</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>