force-app/main/default/objects/Translations__mdt/fields/sv__c.field-meta.xml
<CustomField>
    <fullName>sv__c</fullName>
    <description>swedish</description>
    <label>sv</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>