force-app/main/default/objects/Translations__mdt/fields/th__c.field-meta.xml
<CustomField>
    <fullName>th__c</fullName>
    <description>thai</description>
    <label>th</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>