force-app/main/default/objects/Translations__mdt/fields/tr__c.field-meta.xml
<CustomField>
    <fullName>tr__c</fullName>
    <description>turkish</description>
    <label>tr</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>